WikimediaUI theme: Fix FieldLayout with help and align left/right
It seems we changed the width of frameless buttons from 24/14em to
32/14em, but this hack to position the "help" button was not updated.

Also use round() instead of hardcoding the rounded value.

--- a/src/themes/wikimediaui/layouts.less
+++ b/src/themes/wikimediaui/layouts.less
@@ -86,7 +86,7 @@
 					// Override the default
 					margin-right: 0;
 					// Move into the space of `margin-right` of header
-					margin-left: -1.72em; // ≈ @size-fieldlayout-help-icon + @padding-horizontal-frameless, hardcoded to avoid IE11 rounding problems
+					margin-left: round( -@size-button-base, 2 ); // Round to avoid IE11 rounding problems
 				}
 
 				> .oo-ui-fieldLayout-field {
